<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tomasz123456.shoppinglist.MainActivity">
    <item android:id="@+id/action_add_item"
        android:icon="@drawable/ic_add_circle_outline_white_36dp"
        android:title="@string/action_add_item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_name"
        android:orderInCategory="200"
        android:title="@string/action_sort_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_count"
        android:orderInCategory="300"
        android:title="@string/action_sort_count"
        app:showAsAction="never" />
    <item android:id="@+id/action_clear_list"
        android:orderInCategory="400"
        android:title="@string/action_clear_list"
        app:showAsAction="never" />
</menu>
